homepage updated, GA back on

--- a/case-studies/posts/2023/11/16/learning-from-failure.qmd
+++ b/case-studies/posts/2023/11/16/learning-from-failure.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Learning from failure: 'Red flags' in body-worn camera data"
 description: |
-  When body-worn cameras were rolled out to juvenile correctional officers in Texas in 2018, senior leaders hoped proactive analysis of camera metadata  could be used to monitor compliance and prevent potential abuses. Instead, the analysis revealed a host of technical and administrative glitches, as Noah Wright explains.
+  When body-worn cameras were rolled out to juvenile correctional officers in Texas in 2018, senior leaders hoped proactive analysis of camera metadata could be used to monitor compliance and prevent potential abuses. Instead, the analysis revealed a host of technical and administrative glitches, as Noah Wright explains.
 categories:
   - Crime and justice
   - Public policy
@@ -154,7 +154,7 @@ Surely the shift data would clarify this...
 
 With the data on shifts worked from our timekeeping system, I could theoretically compare actual shifts worked to the amount of footage recorded. If there were patterns in where the gaps in footage fell, that comparison might help to explain why.
 
-In order to join the shift data to the camera data, I needed a common unit of analysis beyond "Employee ID". Using only this value would produce a nonsensical table that joined up every clip of footage to every shift worked.
+In order to join the shift data to the camera data, I needed a common unit of analysis beyond "Employee ID." Using only this value would produce a nonsensical table that joined up every clip of footage to every shift worked.
 
 For example, let's take employee #9001005 at Facility Epsilon between April 1--3. This employee has the following clips recorded during that time period:
 
@@ -286,7 +286,7 @@ In the end, we had to rethink a number of aspects of the shift software's implem
 
 Whatever means we used to monitor compliance with the camera policy, we learned that it couldn't be fully automated. The agency followed up this analysis with a random sampling approach, in which monitors would randomly select times of day they knew a given staff member would have to have their cameras turned on and actually watch the associated clips. This review process confirmed the first impressions from the statistical review above: most employees *were* making good faith attempts at complying with the policy despite technical glitches, short-staffing, and administrative confusion. It also confirmed that proactive monitoring of correctional officers was a human process which had to come from supervisors and staff.
 
-The one piece of the analysis we did use going forward was the clip analysis (converted into a Power BI dashboard and included in the [GitHub repository](https://github.com/enndubbs/Body-Worn-Camera-Monitoring) for this article), but only as a supplement for already-launched investigations, not a prompt for one. Body-worn camera footage remained immensely useful for investigations after-the-fact, but inconsistencies in clip data were not, in and of themselves, particularly noteworthy "red flags". At the end of the day, analytics can contextualize and enhance human judgment, but it cannot replace it.
+The one piece of the analysis we did use going forward was the clip analysis (converted into a Power BI dashboard and included in the [GitHub repository](https://github.com/enndubbs/Body-Worn-Camera-Monitoring) for this article), but only as a supplement for already-launched investigations, not a prompt for one. Body-worn camera footage remained immensely useful for investigations after-the-fact, but inconsistencies in clip data were not, in and of themselves, particularly noteworthy "red flags." At the end of the day, analytics can contextualize and enhance human judgment, but it cannot replace it.
 
 In academia, the bias in favor of positive findings is well-documented. The failure to find something, or a lack of statistical significance, does not lend itself to publication in the same way that a novel discovery does. But, in an applied setting, where results matter more than publication criteria, negative findings can be highly insightful. They can falsify erroneous assumptions, bring unknown problems to light, and prompt the creation of new processes and tools. In this context, a failure is only truly a failure if nothing is learned from it.
 
