--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!how-to-open-science.qmd"
+    - "!learning-from-failure.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -29,6 +29,7 @@ listing:
     contents: 
     - /case-studies
     - "!index.qmd"
+    - "!learning-from-failure.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -49,9 +50,33 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  # - id: careers
+  - id: careers
+    contents: 
+    - /careers/posts
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
+
+  - id: viewpoints
+    contents: 
+    - /viewpoints/posts
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
+
+  # - id: editors-blog
   #   contents: 
-  #   - /careers/posts
+  #   - /viewpoints/editors-blog
   #   - "!index.qmd"
   #   sort: "date desc"
   #   type: grid
@@ -60,32 +85,6 @@ listing:
   #   filter-ui: false
   #   max-items: 3
   #   feed: false
-
-  - id: viewpoints
-    contents: 
-    - /viewpoints/posts
-    - "!index.qmd"
-    - "!ai-for-humanity.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
-
-  - id: editors-blog
-    contents: 
-    - /viewpoints/editors-blog
-    - "!index.qmd"
-    - "!ai-conf-panel.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
 
   # - id: datasciencebites
   #   contents: 
@@ -99,9 +98,22 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  # - id: interviews
+  - id: interviews
+    contents: 
+    - /viewpoints/interviews
+    - "!index.qmd"
+    - "!evaluating-ai.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
+
+  # - id: career-profiles
   #   contents: 
-  #   - /viewpoints/interviews
+  #   - /careers/career-profiles
   #   - "!index.qmd"
   #   sort: "date desc"
   #   type: grid
@@ -111,31 +123,19 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  - id: career-profiles
-    contents: 
-    - /careers/career-profiles
-    - "!index.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
-
 toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/ideas/posts/2023/11/06/how-to-open-science.qmd">
+<a href="/case-studies/posts/2023/11/16/learning-from-failure.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## How to 'open science': A brief guide to principles and practices
-As a university lecturer, Isabel Sassoon made frequent use of open data resources for teaching and research. But it was only recently that she fully learned to embrace and apply the principles, tools, and processes of 'open science' to her own work. In this short guide, Sassoon explains how you can do the same.  
+## Learning from failure: 'Red flags' in body-worn camera data
+When body-worn cameras were rolled out to juvenile correctional officers in Texas in 2018, senior leaders hoped proactive analysis of camera metadata could be used to monitor compliance and prevent potential abuses. Instead, the analysis revealed a host of technical and administrative glitches, as Noah Wright explains.  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](ideas/posts/2023/11/06/images/basil-james-iC4BsZQaREg-unsplash.png)
+![](case-studies/posts/2023/11/16/images/bodycam-monitor.png)
 :::
 :::
 
@@ -170,53 +170,11 @@ Welcome to **Real World Data Science**, a new project from the [Royal Statistica
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## We think data can be more powerful when it’s linked, and when it’s made accessible -- in a secure way -- to a wider audience for analysis. It can offer more insights and better fulfil its potential to serve the public goods.
-Helen Miller-Bakewell, UK Office for Statistics Regulation
+## AI models didn’t invent medicine, accountancy or engineering. They didn’t learn anything directly from the world – human experts taught AI models how to do these things. And they [the human experts] did it without giving their permission, or even knowing that it was happening. The large tech companies have sucked up all of human knowledge and culture and now provide access to it for the price of an API call. This is a huge transfer of power and value from humanity to the tech companies.
+Martin Goodson on why we need 'an AI for humanity'
 
 ::: {.button}
-[Listen to the interview](viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.qmd)
-:::
-
-:::
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
-<a href="careers/career-profiles/index.qmd">
-
-## Career profiles 
-</a>
-
-::: {#career-profiles}
-:::
-
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
-<a href="case-studies/index.qmd">
-
-## Case Studies
-</a> 
-
-::: {#case-studies}
-:::
-
-:::
-:::
-
-::: {.pullout-text}
-::: {.pullout-container}
-::: {.pullout-block .black-background}
-![](images/quote-purple.png){width="100px"}
-
-## The way I’ve always differentiated between data analytics and data science is that if you want to make repeated decisions on a daily or weekly basis, then that’s when it becomes more about a data science question versus a data analytics question. Data analytics is generally about answering large, one off, ad-hoc questions, whereas data science is about making repeated decisions using data and the scientific method.
-Niclas Thomas, head of data science, Next
-
-::: {.button}
-[Discover Niclas's career story](careers/career-profiles/posts/2023/10/04/niclas-thomas.qmd)
+[Read the article](viewpoints/posts/2023/10/20/ai-for-humanity.qmd)
 :::
 
 :::
@@ -238,12 +196,54 @@ Niclas Thomas, head of data science, Next
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/editors-blog/index.qmd">
+<a href="viewpoints/interviews/index.qmd">
 
-## Editors' blog 
+## Interviews 
 </a>
 
-::: {#editors-blog}
+::: {#interviews}
+:::
+
+:::
+:::
+
+::: {.pullout-text}
+::: {.pullout-container}
+::: {.pullout-block .black-background}
+![](images/quote-purple.png){width="100px"}
+
+## We think data can be more powerful when it’s linked, and when it’s made accessible -- in a secure way -- to a wider audience for analysis. It can offer more insights and better fulfil its potential to serve the public goods.
+Helen Miller-Bakewell, UK Office for Statistics Regulation
+
+::: {.button}
+[Listen to the interview](viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.qmd)
+:::
+
+:::
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="careers/index.qmd">
+
+## Careers 
+</a>
+
+::: {#careers}
+:::
+
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="case-studies/index.qmd">
+
+## Case Studies
+</a> 
+
+::: {#case-studies}
 :::
 
 :::
