--- a/case-studies/posts/2023/11/22/splink.qmd
+++ b/case-studies/posts/2023/11/22/splink.qmd
@@ -5,7 +5,7 @@ description: |
 categories:
   - Crime and justice
   - Data quality
-  - Data linking
+  - Data linkage
 author: Robin Linacre
 date: 11/22/2023
 toc: true
@@ -172,6 +172,11 @@ Splink has been used to link some of the largest datasets held by the Ministry o
 More widely, the demand for Splink has been higher than we expected -- with over 7 million downloads. It has been used in other government departments including the Office for National Statistics and internationally, the private sector, and published academic research from top international universities.
 
 Splink has also had external contributions from over 30 people, including staff at the Australian Bureau of Statistics, DataBricks, other government departments, academics, and various private sector consultancies.
+
+::: {.callout-note style="margin-top: 2.25rem;" appearance="simple"}
+**Editor's note**
+For more on data linkage, [check out our interview with Helen Miller-Bakewell of the UK Office for Statistics Regulation](https://realworlddatascience.net/viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.html), discussing the OSR report, [Data Sharing and Linkage for the Public Good](https://osr.statisticsauthority.gov.uk/publication/data-sharing-and-linkage-for-the-public-good/).
+:::
 
 ::: {.article-btn}
 [Find more case studies](/case-studies/index.qmd)
