--- a/case-studies/posts/2023/11/22/splink.qmd
+++ b/case-studies/posts/2023/11/22/splink.qmd
@@ -1,7 +1,7 @@
 ---
 title: Deduplicating and linking large datasets using Splink
 description: |
-  Robin Linacre introduces a tool developed by the UK Ministry of Justice, which uses probabilistic record linkage to improve the quality of justice system data.
+  Robin Linacre introduces an open source tool, developed by the UK Ministry of Justice, which uses probabilistic record linkage to improve the quality of justice system data.
 categories:
   - Crime and justice
   - Data quality
@@ -174,8 +174,7 @@ More widely, the demand for Splink has been higher than we expected -- with over
 Splink has also had external contributions from over 30 people, including staff at the Australian Bureau of Statistics, DataBricks, other government departments, academics, and various private sector consultancies.
 
 ::: {.callout-note style="margin-top: 2.25rem;" appearance="simple"}
-**Editor's note**
-For more on data linkage, [check out our interview with Helen Miller-Bakewell of the UK Office for Statistics Regulation](https://realworlddatascience.net/viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.html), discussing the OSR report, [Data Sharing and Linkage for the Public Good](https://osr.statisticsauthority.gov.uk/publication/data-sharing-and-linkage-for-the-public-good/).
+**Editor's note**: For more on data linkage, [check out our interview with Helen Miller-Bakewell of the UK Office for Statistics Regulation](https://realworlddatascience.net/viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.html), discussing the OSR report, [Data Sharing and Linkage for the Public Good](https://osr.statisticsauthority.gov.uk/publication/data-sharing-and-linkage-for-the-public-good/).
 :::
 
 ::: {.article-btn}
