--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!learning-from-failure.qmd"
+    - "!splink.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -30,6 +30,7 @@ listing:
     - /case-studies
     - "!index.qmd"
     - "!learning-from-failure.qmd"
+    - "!splink.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -102,7 +103,6 @@ listing:
     contents: 
     - /viewpoints/interviews
     - "!index.qmd"
-    - "!evaluating-ai.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -127,15 +127,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/case-studies/posts/2023/11/16/learning-from-failure.qmd">
+<a href="/case-studies/posts/2023/11/22/splink.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Learning from failure: 'Red flags' in body-worn camera data
-When body-worn cameras were rolled out to juvenile correctional officers in Texas in 2018, senior leaders hoped proactive analysis of camera metadata could be used to monitor compliance and prevent potential abuses. Instead, the analysis revealed a host of technical and administrative glitches, as Noah Wright explains.  
+## Deduplicating and linking large datasets using Splink
+Data duplication is a ubiquitous problem affecting data quality. Organisations often have multiple records that refer to the same entity but no unique identifier that ties these entities together. Robin Linacre introduces an open source tool, developed by the UK Ministry of Justice, which uses probabilistic record linkage to improve the quality of justice system data.  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](case-studies/posts/2023/11/16/images/bodycam-monitor.png)
+![](case-studies/posts/2023/11/22/images/possessed-photography-NwpSBZMhc-M-unsplash.png)
 :::
 :::
 
@@ -170,27 +170,14 @@ Welcome to **Real World Data Science**, a new project from the [Royal Statistica
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## AI models didn’t invent medicine, accountancy or engineering. They didn’t learn anything directly from the world – human experts taught AI models how to do these things. And they [the human experts] did it without giving their permission, or even knowing that it was happening. The large tech companies have sucked up all of human knowledge and culture and now provide access to it for the price of an API call. This is a huge transfer of power and value from humanity to the tech companies.
-Martin Goodson on why we need 'an AI for humanity'
+## We want to be a strong voice in the debate on AI because it is underpinned by statistical and mathematical techniques. We have a really important role to play in focusing attention not only on AI outputs but on inputs. That is an area that hasn’t received enough attention but it is one that statisticians understand incredibly well.
+Andrew Garrett, president, Royal Statistical Society 
 
 ::: {.button}
-[Read the article](viewpoints/posts/2023/10/20/ai-for-humanity.qmd)
+[Read the interview](viewpoints/interviews/posts/2023/10/25/evaluating-ai.qmd)
 :::
 
 :::
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
-<a href="viewpoints/index.qmd">
-
-## Viewpoints
-</a> 
-
-::: {#viewpoints}
-:::
-
 :::
 :::
 
@@ -207,16 +194,29 @@ Martin Goodson on why we need 'an AI for humanity'
 :::
 :::
 
+::: {.content-container}
+::: {.listing-block}
+<a href="viewpoints/index.qmd">
+
+## Viewpoints
+</a> 
+
+::: {#viewpoints}
+:::
+
+:::
+:::
+
 ::: {.pullout-text}
 ::: {.pullout-container}
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## We think data can be more powerful when it’s linked, and when it’s made accessible -- in a secure way -- to a wider audience for analysis. It can offer more insights and better fulfil its potential to serve the public goods.
-Helen Miller-Bakewell, UK Office for Statistics Regulation
+## AI models didn’t invent medicine, accountancy or engineering. They didn’t learn anything directly from the world – human experts taught AI models how to do these things. And they [the human experts] did it without giving their permission, or even knowing that it was happening. The large tech companies have sucked up all of human knowledge and culture and now provide access to it for the price of an API call. This is a huge transfer of power and value from humanity to the tech companies.
+Martin Goodson on why we need 'an AI for humanity'
 
 ::: {.button}
-[Listen to the interview](viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.qmd)
+[Read the article](viewpoints/posts/2023/10/20/ai-for-humanity.qmd)
 :::
 
 :::
