images and pullquote added

--- a/viewpoints/interviews/posts/2023/11/24/politics-of-modelling.qmd
+++ b/viewpoints/interviews/posts/2023/11/24/politics-of-modelling.qmd
@@ -1,5 +1,5 @@
 ---
-title: "'I would like modellers to be more humble and less ambitious in developing monster models that are impossible to inspect and explore'"
+title: "'I would like modellers to be less ambitious in developing monster models that are impossible to inspect'"
 description: |
   Real World Data Science interviews Andrea Saltelli, co-editor of 'The Politics of Modelling,' about pandemic models, trust in science, and why we must seek to uncover the assumptions that  shape model outputs.
 categories:
@@ -7,8 +7,8 @@ categories:
   - Public policy
 author: Brian Tarran
 date: 11/24/2023
-# image: images/andy-garrett.png
-# image-alt: Portrait photo of Andrew Garrett, president of the Royal Statistical Society.
+image: images/andrea-saltelli.png
+image-alt: Portrait photo of Andrea Saltelli, co-editor of 'The Politics of Modelling.'
 toc: false
 ---
 
@@ -31,7 +31,20 @@ I am a chemist. I got my degree in chemistry, but for most of my life I have wor
 It starts from a broader discussion of a state of exception enjoyed by mathematical modelling. One point we try to make in the book is that models are exceptional because they have an incredible palette of methodologies -- even more than statistics. They are not a discipline, because everyone does modelling in their own craft in a different way. Modelling even escapes the gaze of sociologists most of the time because sociologists are more interested in algorithms and statistics. And, as a consequence of this state of exception, models enjoy many privileges, including a better defence of the pretence of neutrality, and they maintain, in a certain sense, a lapse of symmetry between developers and users. They also have a very strong grip on policy, whereby models can enjoy a high epistemic authority, and this epistemic authority seems to be proportional to the dimension of the model or the base of data on which the model has been calibrated. All of this creates a situation which leads to a problem -- a problem for society, on the one hand, because models are used to suggest policies which are not optimal, and on the other hand, trust is consumed, trust is lost, and this may have been happening as a result of the Covid-19 epidemic and the way mathematical modelling was used in the context of the epidemic.
 
 **The book emerged out of the “manifesto for responsible modelling” that you published in *Nature* a few years back. Could you describe that manifesto?**\
-The manifesto was something which came out of the pandemic, in fact, because we were all locked up at home and we could spend some time reflecting and writing. We tried to produce a set of recommendations for both society and the modellers: for society to be a bit more circumspect in accepting results from mathematical modelling, and for modellers to be more cautious in formulating their predictions. But, beyond the issue of apparent precision of mathematical models, there was also the issue that models are built on a series of assumptions, each of which may have a great bearing on the result. And not only that but also, at the point where you formulate a mathematical model, you assume that you have already decided what is the problem, what is the direction of progress. So, there are really many normative assumptions which are embedded into that. Then there is the issue that mathematical models are not done by everyone; they are done by specific groups of people who belong to, normally, a certain identified class, some kind of elite -- not a financial elite, but an elite in terms of competencies and knowledge. And this also creates bias, because – to put it brutally -- if you can work at home with your laptop, the epidemic doesn't affect you so much. But if you work in a plant and the plant is closed, and you are not paid, this destroys your life, or the life of your family. This asymmetry -- or inequality, let's say, or implicit bias -- in those who are producing the analysis, this was, for many of us, an issue which needed to be brought to the attention of the public. 
+The manifesto was something which came out of the pandemic, in fact, because we were all locked up at home and we could spend some time reflecting and writing. We tried to produce a set of recommendations for both society and the modellers: for society to be a bit more circumspect in accepting results from mathematical modelling, and for modellers to be more cautious in formulating their predictions. But, beyond the issue of apparent precision of mathematical models, there was also the issue that models are built on a series of assumptions, each of which may have a great bearing on the result. And not only that but also, at the point where you formulate a mathematical model, you assume that you have already decided what is the problem, what is the direction of progress. So, there are really many normative assumptions which are embedded into that. Then there is the issue that mathematical models are not done by everyone; they are done by specific groups of people who belong to, normally, a certain identified class, some kind of elite -- not a financial elite, but an elite in terms of competencies and knowledge. And this also creates bias, because – to put it brutally -- if you can work at home with your laptop, the epidemic doesn't affect you so much. But if you work in a plant and the plant is closed, and you are not paid, this destroys your life, or the life of your family. This asymmetry -- or inequality, let's say, or implicit bias -- in those who are producing the analysis, this was, for many of us, an issue which needed to be brought to the attention of the public.
+
+::: {.pullquote-container}
+::: grid
+::: {.g-col-12 .g-col-lg-4}
+![Andrea Saltelli, co-editor of 'The Politics of Modelling.'](images/andrea-saltelli-sq.png){fig-alt="Andrea Saltelli, co-editor of 'The Politics of Modelling'" fig-align="left"}
+::: 
+::: {.g-col-12 .g-col-lg-8 .pullquote-grid .pullquote}
+![](/images/pullquote-purple.png){width="50px"}
+
+The manifesto was something which came out of the pandemic... We tried to produce a set of recommendations for both society and the modellers: for society to be a bit more circumspect in accepting results from mathematical modelling, and for modellers to be more cautious in formulating their predictions.
+:::
+:::
+:::
 
 **Surely the urgency of the Covid situation prevented people from taking a step back and thinking more deeply about how models are constructed. Is it not forgivable in a situation like that? Or, is your argument that we should be doing this at all times, regardless of the urgency, regardless of the time pressures?**\
 I am tempted to say both yes and no. Yes, because surely the situation was urgent, and many things which were done in a way which one would consider suboptimal were later justified on the grounds of urgency. We noted incredible differences in the measures adopted in several countries, so for us it was obvious that even though everyone was claiming to “follow the science,” they seemed to be following different sciences, or perhaps they were following “the science” which was more instrumental or more convenient to justify what was simply politically expedient. 
@@ -75,7 +88,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "'I would like modellers to be more humble and less ambitious in developing monster models that are impossible to inspect and explore.'" Real World Data Science, November 24, 2023. [URL](https://realworlddatascience.net/viewpoints/interviews/posts/2023/11/24/politics-of-modelling.html)
+: Tarran, Brian. 2023. "'I would like modellers to be less ambitious in developing monster models that are impossible to inspect.'" Real World Data Science, November 24, 2023. [URL](https://realworlddatascience.net/viewpoints/interviews/posts/2023/11/24/politics-of-modelling.html)
 :::
 :::
 :::
