--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!splink.qmd"
+    - "!politics-of-modelling.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -103,6 +103,7 @@ listing:
     contents: 
     - /viewpoints/interviews
     - "!index.qmd"
+    - "!politics-of-modelling.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -127,15 +128,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/case-studies/posts/2023/11/22/splink.qmd">
+<a href="/viewpoints/interviews/posts/2023/11/24/politics-of-modelling.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Deduplicating and linking large datasets using Splink
-Data duplication is a ubiquitous problem affecting data quality. Organisations often have multiple records that refer to the same entity but no unique identifier that ties these entities together. Robin Linacre introduces an open source tool, developed by the UK Ministry of Justice, which uses probabilistic record linkage to improve the quality of justice system data.  
+## 'I would like modellers to be less ambitious in developing monster models that are impossible to inspect'
+Real World Data Science interviews Andrea Saltelli, co-editor of 'The Politics of Modelling,' about pandemic models, trust in science, and why we must seek to uncover the assumptions that  shape model outputs.  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](case-studies/posts/2023/11/22/images/possessed-photography-NwpSBZMhc-M-unsplash.png)
+![](viewpoints/interviews/posts/2023/11/24/images/andrea-saltelli.png)
 :::
 :::
 
