ati added to homepage

--- a/index.qmd
+++ b/index.qmd
@@ -256,15 +256,19 @@ Martin Goodson on why we need 'an AI for humanity'
 ::: grid
 
 
-::: {.g-col-12 .g-col-md-3}
+::: {.g-col-12 .g-col-md-2}
 ### Published by
-[![](images/rss-logo-footer.png){fig-align="left"}](https://rss.org.uk/)
+[![](images/rss-footer-new.png){fig-align="left"}](https://rss.org.uk/)
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### Our partners
-[![](images/asa-logo-footer.png){fig-align="left"}](https://www.amstat.org/)
+[![](images/asa-footer-new.png){fig-align="left"}](https://www.amstat.org/)
 :::
-::: {.g-col-12 .g-col-md-1}
+::: {.g-col-12 .g-col-md-2}
+### With support from 
+[![](images\ati-footer-new.png){fig-align="left"}](https://www.turing.ac.uk/)
+:::
+::: {.g-col-12 .g-col-md-2}
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### About us
@@ -279,13 +283,7 @@ Martin Goodson on why we need 'an AI for humanity'
 [Contributor guidelines](/contributor-docs/contributor-guidelines.qmd)\
 [Style guide](/contributor-docs/style-guide.qmd)
 :::
-::: {.g-col-12 .g-col-md-2}
-### Follow us
-[GitHub](https://github.com/realworlddatascience)\
-[Twitter](https://twitter.com/rwdatasci)\
-[LinkedIn](https://www.linkedin.com/showcase/rss-real-world-data-science)\
-[Mastodon](https://fosstodon.org/@rwdatasci)\
-:::
+
 
 <!-- ::: {.g-col-12 .g-col-md-12}
 ### Our partners
