ati added to partners page

--- a/rwds-partners.qmd
+++ b/rwds-partners.qmd
@@ -25,4 +25,15 @@ Our members serve in industry, government, and academia in more than 90 countrie
 
 To support the work of the ASA, [become a member today](https://www.amstat.org/membership/become-a-member/membership-options?hkey=0301def8-92e1-4bf2-9aff-02959b3e61f5). 
 
-**Email:** [asainfo@amstat.org](mailto:asainfo@amstat.org) 
+**Email:** [asainfo@amstat.org](mailto:asainfo@amstat.org)
+
+## Funders
+[![](images/ATI_logo_black_ATI_logo_black.png){fig-align="left" width="200px" style="margin-top: 0.5rem"}](https://www.turing.ac.uk/)
+
+Real World Data Science was supported by startup funding from [The Alan Turing Institute](https://www.turing.ac.uk/).
+
+The Alan Turing Institute, headquartered in the British Library, London, was created as the UK's national institute for data science in 2015. In 2017, as a result of a government recommendation, artificial intelligence was added to its remit.  
+
+The Institute is named in honour of Alan Turing (23 June 1912 – 7 June 1954), whose pioneering work in theoretical and applied mathematics, engineering and computing are considered to be the key disciplines comprising the fields of data science and artificial intelligence.
+
+To find out more about The Alan Turing Institute, its strategy and programme of work, visit [turing.ac.uk](https://www.turing.ac.uk/). 
