--- a/index.qmd
+++ b/index.qmd
@@ -266,7 +266,7 @@ Martin Goodson on why we need 'an AI for humanity'
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### With support from 
-[![](images\ati-footer-new.png){fig-align="left"}](https://www.turing.ac.uk/)
+[![](images/ati-footer-new.png){fig-align="left"}](https://www.turing.ac.uk/)
 :::
 ::: {.g-col-12 .g-col-md-2}
 :::
