--- a/contact.qmd
+++ b/contact.qmd
@@ -11,7 +11,7 @@ title-block-banner: true
 
 **GitHub:** [@realworlddatascience](https://github.com/realworlddatascience)
 
-**Twitter:** [@rwdatasci](https://twitter.com/rwdatasci)
+**Twitter/X:** [@rwdatasci](https://twitter.com/rwdatasci)
 
 **LinkedIn:** [RSS Real World Data Science](https://www.linkedin.com/showcase/rss-real-world-data-science)
 
