--- a/contributor-docs/contributor-guidelines.qmd
+++ b/contributor-docs/contributor-guidelines.qmd
@@ -44,7 +44,7 @@ Draft submissions will be shared for review with members of the Real World Data 
 Once revisions are complete and content is accepted for publication, authors will be provided with HTML files to preview published content. Following sign-off by author and editor, HTML files will be made live.
 
 ## Post-publication
-Contributors and editors will work together to promote content via social media platforms -- Twitter, LinkedIn, blogs -- and in other channels as appropriate -- e.g., in response to related questions on Quora or Stack Overflow. 
+Contributors and editors will work together to promote content via social media platforms -- Twitter/X, LinkedIn, blogs -- and in other channels as appropriate -- e.g., in response to related questions on Quora or Stack Overflow. 
 
 Contributors are encouraged to monitor their content regularly for user comments and discussions. Engaging in discussions with users -- whether through the Real World Data Science platform or via social media and other channels -- is an effective way of developing an audience: it builds profile for the contributor and their content, and encourages other users to find and interact with content. 
 
