--- a/contributor-docs/recommender.qmd
+++ b/contributor-docs/recommender.qmd
@@ -7,7 +7,7 @@ Too much content, not enough time. That about sums up the problem facing the dat
 ## Article types and structures 
 
 ### Feeds 
-Feeds can be constructed around different topics and audiences. For example, you might want to recommend to all data scientists the “10 best blogs on machine learning” or “5 data visualisation experts to follow on Twitter”. Or you might have a list of sources specifically targeted at data science educators (e.g., “the best books on teaching coding”) or data science leaders (“5 insightful case studies on building data science teams”).  
+Feeds can be constructed around different topics and audiences. For example, you might want to recommend to all data scientists the “10 best blogs on machine learning” or “5 data visualisation experts to follow on Twitter/X”. Or you might have a list of sources specifically targeted at data science educators (e.g., “the best books on teaching coding”) or data science leaders (“5 insightful case studies on building data science teams”).  
 
 Whatever you choose to focus on, the following outline provides a basic guide for structuring your feed: 
 
