sc text and photo

--- a/viewpoints/editors-blog/posts/2022/10/18/meet-the-team.qmd
+++ b/viewpoints/editors-blog/posts/2022/10/18/meet-the-team.qmd
@@ -44,7 +44,17 @@ I am delighted to be chairing the editorial board of the new data science projec
 
 I am a reader in the Artificial Intelligence Research Centre, School of Computing at Ulster University, UK. My research interests include machine learning, data science and ensemble methods underpinned with the Dempster-Shafer theory of evidence. I have led on developing data analytics for anomaly/change detection within satellite data, as well as text analytics for document categorisation and sentiment analysis. I have served a number of international conferences as general chair and technical program committee chair. I am an associate editor for the *International Journal of Intelligence Systems* and a core steering committee member for the series of International Conference on Knowledge Science, Engineering and Management.  
 
-As a member of this editorial board, I am passionate about contributing my expertise to the development of data science and its real-world applications. I look forward to sharing my experience with others in the data science community, in particular to address ethical challenges posed by large language models and to inspire new curriculum development in the field of data science. 
+As a member of this editorial board, I am passionate about contributing my expertise to the development of data science and its real-world applications. I look forward to sharing my experience with others in the data science community, in particular to address ethical challenges posed by large language models and to inspire new curriculum development in the field of data science.
+
+**Sayma Chowdhury**
+
+::: {.column-margin}
+![](images/Sayma.png)
+:::
+
+I am a freelance data scientist and product designer on Upwork, with a client portfolio ranging from startups to commercial businesses such as supermarkets, charities, pharmaceuticals and automotive manufacturers. I am currently completing a MicroMasters in data, economy and development policy with MIT, before progressing on to a PhD in digital humanities. My research interests are in human-computer interaction, natural language processing and machine learning for prototyping.
+
+The RSS was instrumental in my training and professional development as a data scientist in the early stages of my career, particularly in mastering statistics and R. Data science is a rapidly growing field with employment opportunities in many sectors but there is a growing need to uphold a realistic and accurate expectation of competency within the industry. I will endeavour to present expert practical guidelines for data scientists as well as demonstrate the versatility of the profession. I hope the site will be a benchmark for academic and professional resources by expert data scientists from the industry, accessible to data scientists at all levels, anywhere in the world.
 
 **Lee Clewley** 
 
